--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,3 @@
-/* колір тексту*/
-#2E2F42
-#434455
-/* колір кнопок і лого */
-#4D5AE5
-#FFFFFF 
 
 :root {
     --primary-color: #2E2F42;
@@ -28,35 +22,31 @@ color: var(--primary-color);
 }
 
 .logo{
-font-family: 'Raleway';
-font-style: normal;
+font-family: 'Raleway', sans-serif;
 font-weight: 800;
 font-size: 18px;
 line-height: 1.33;
 letter-spacing: 0.03em;
 color: #2E2F42;
 }
-
+.web{color: var(--primary-btn);}
 .header-list {
 }
 .header-item {
 }
 .header-link {
-font-weight: 700;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color: var(--primary-color);
 }
 .header-mail {
-font-weight: 400;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color: var(--secondary-color);
 }
 .header-tel {
-font-weight: 400;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
@@ -73,12 +63,11 @@ color: var(--secondary-color);
 }
 /* ------hero----- */ 
 
-.hero {
-}
-.hero-list {
-}
-
-.hero-item {
+.hero-title {
+font-size: 36px;
+line-height: 1.11;
+letter-spacing: 0.02em;
+color: var(--primary-color);
 }
 
 .hero-main {
@@ -100,16 +89,19 @@ cursor: pointer;
 background-color: #E7E9FC;
 border-radius: 4px
 }
+.hero-btn:hover,
+.hero-btn:focus {
+    color: #FFFFFF;
+    background-color: var(--primary-btn);
+}
 
 .hero-headline {
-font-weight: 700;
 font-size: 20px;
-line-height: 1,2;
+line-height: 1.2;
 letter-spacing: 0.02em;
 color: var(--primary-color);
 }
 .hero-text {
-font-weight: 400;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
@@ -133,7 +125,6 @@ color: #F4F4FD;
 
 
 .footer-text {
-font-weight: 400;
 font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
