--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,11 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 color: var(--primary-color);
 }
+.header-link:hover,
+.header-link:focus{
+    color: var(--primary-btn);
+}
+
 .header-mail {
 font-size: 16px;
 line-height: 1.5;
