--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-
 :root {
     --primary-color: #2E2F42;
     --secondary-color: #434455;
@@ -14,7 +13,11 @@ font-family: "roboto", sans-serif;
 color: var(--primary-color);
 }
 
-
+p,h1,h2,h3,h4,h5,h6 {
+    margin: 0;
+}
+ul {margin: 0;
+padding-left: 0;}
 /* -----header----- */
 
 .header {
